--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
   "plugins": ["react", "unused-imports"],
   "ignorePatterns": ["interfaces/*"],
   "rules": {
+    "react-hooks/exhaustive-deps": "off",
     "@next/next/no-img-element": "off",
     "unused-imports/no-unused-imports": "error",
     "no-unused-vars": [
