--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
- NEXT_PUBLIC_API=https://ecommerce-store-backend-dev.herokuapp.com/
+ NEXT_PUBLIC_API=https://ecommerce-store-backend-dev.herokuapp.com/api
