--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.0"
-  }
+  },
+  "cacheDirectories": [
+    "node_modules/",
+    ".next/cache/"
+  ]
 }
