create prod firebase redirect url

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
  NEXT_PUBLIC_API=https://ecommerce-store-backend-dev.herokuapp.com/api
+REGISTER_COMPLETE = 'https://ecommerce-store-dev.herokuapp.com/register/complete'
