--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.11",
+    "lodash": "^4.17.21",
     "next": "^12.1.6",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
