--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-image-file-resizer": "^0.4.8",
+    "react-modal-image": "^2.5.0",
     "react-modal-image-responsive": "^1.1.1",
     "react-query": "^3.39.1",
     "react-redux": "^8.0.2",
